--- a/Select_MMO/Select_MMO.vcxproj.filters
+++ b/Select_MMO/Select_MMO.vcxproj.filters
@@ -13,10 +13,13 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\main">
+      <UniqueIdentifier>{56627cc1-1ddf-4a74-bbb0-9e31ff67119a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\main</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
