--- a/Select_MMO/Select_MMO.vcxproj.filters
+++ b/Select_MMO/Select_MMO.vcxproj.filters
@@ -16,10 +16,24 @@
     <Filter Include="소스 파일\main">
       <UniqueIdentifier>{56627cc1-1ddf-4a74-bbb0-9e31ff67119a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Network">
+      <UniqueIdentifier>{65420065-164e-4c5e-b2e5-19d3f93fb2a5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일\main</Filter>
     </ClCompile>
+    <ClCompile Include="CNetwork.cpp">
+      <Filter>소스 파일\Network</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CNetwork.h">
+      <Filter>소스 파일\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Session.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
