[Update] Session 구조체
- 기본 생성자와 파라메터 생성자 생성
- RIngbuffer 추가
- 위치 바꾸기

--- a/Select_MMO/Select_MMO.vcxproj
+++ b/Select_MMO/Select_MMO.vcxproj
@@ -128,10 +128,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\OneDrive\바탕 화면\새 폴더\tmp\MMOTcp\MMOTcp\CRingBuffer.cpp" />
     <ClCompile Include="CNetwork.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\OneDrive\바탕 화면\새 폴더\tmp\MMOTcp\MMOTcp\CRingBuffer.h" />
     <ClInclude Include="CNetwork.h" />
     <ClInclude Include="Session.h" />
   </ItemGroup>
